<resources>
    <string name="app_name">Quizzar</string>
    <string name="app_description">Augmented Reality Based Learning</string>
    <string name="button_start">Start</string>
    <string name="activities_list_title_string">Vuforia Samples</string>
    <string name="activities_list_empty">No activities</string>
    <string name="button_OK">OK</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>
    <string name="content_desc_camera_button">Camera Button</string>
    <string name="overlay_build_target_help">Hold the device parallel to the target</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_button_red">Red</string>
    <string name="menu_button_blue">Blue</string>
    <string name="menu_button_yellow">Yellow</string>
    <string name="menu_button_green">Green</string>
    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="menu_back">About</string>
    <string name="menu_extended_tracking">Extended Tracking</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_playFullscreenVideo">Play Fullscreen</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_camera_front">Front</string>
    <string name="menu_camera_back">Rear</string>
    <string name="splash_screen_description">Vuforia Splash</string>
    <string name="answer_correct"><font color="green">GOED</font></string>
    <string name="answer_incorrect"><font color="red">FOUT</font></string>
    <string name="correct_answer_header">Juiste antwoord</string>
    <string name="given_answer_header">Resultaat</string>
    <string name="berlin_wall">The Berlin Wall (German: Berliner Mauer) was a guarded concrete barrier that physically and ideologically divided Berlin from 1961 to 1989.[1] Constructed by the German Democratic Republic (GDR, East Germany), starting on 13 August 1961, the Wall completely cut off (by land) West Berlin from surrounding East Germany and from East Berlin until government officials opened it in November 1989.[2] Its demolition officially began on 13 June 1990 and was completed in 1992.[3] The barrier included guard towers placed along large concrete walls,[4] which circumscribed a wide area (later known as the "death strip") that contained anti-vehicle trenches, "fakir beds" and other defenses. The Eastern Bloc claimed that the Wall was erected to protect its population from fascist elements conspiring to prevent the "will of the people" in building a socialist state in East Germany. In practice, the Wall served to prevent the massive emigration and defection that had marked East Germany and the communist Eastern Bloc during the post-World War II period.</string>
    <string name="John_Kennedy_Nikita_Khrushchev_1961">Khrushchev and Kennedy devoted a significant amount of time at the Vienna Summit to discussing the Berlin Crisis. Khrushchev opened the conversation by expressing the Soviet perspective that a united Germany “[constituted] a threat of World War III.”[13] He pointed to the fact that Germany began World War II. Only fifteen years after the end of that war, Germany again posed a “military threat” as a member of NATO.[14] Khrushchev explained that the USSR desired to sign a separate peace treaty with East Germany. Such a treaty, he argued, “would not prejudice the interests of the U.S., the UK, or France.”[15] He told Kennedy that if the United States failed to support a peace treaty, the Soviet Union would sign the peace treaty unilaterally.</string>
    <string name="berlin_wall_question">Welke datum is de Berlijnse Muur neergehaald?</string>
    <string name="berlin_wall_answer_one">1956</string>
    <string name="berlin_wall_answer_two">1988</string>
    <string name="berlin_wall_answer_three">1991</string>
    <string name="berlin_wall_answer_four">1975</string>
    <string name="John_Kennedy_Nikita_Khrushchev_1961_question">Kennedy Khruschev question</string>
    <string name="John_Kennedy_Nikita_Khrushchev_1961_answer_one">Kennedy Khruschev a1</string>
    <string name="John_Kennedy_Nikita_Khrushchev_1961_answer_two">Kennedy Khruschev a2</string>
    <string name="John_Kennedy_Nikita_Khrushchev_1961_answer_three">Kennedy Khruschev a3</string>
    <string name="John_Kennedy_Nikita_Khrushchev_1961_answer_four">Kennedy Khruschev a4</string>
    <string name="Yalta_Conference">The Yalta Conference, sometimes called the Crimea Conference and code named the Argonaut Conference, held from February 7 to 11, 1945, was the World War II meeting of the heads of government of the United States, the United Kingdom and the Soviet Union, represented by President Franklin D. Roosevelt, Prime Minister Winston Churchill and Premier Joseph Stalin, respectively, for the purpose of discussing Europe\'s post-war reorganization. The conference convened in the Livadia Palace near Yalta in Crimea, USSR. The goal of the conference was to shape a post-war peace that represented not just a collective security order but a plan to give self-determination to the liberated peoples of post-Nazi Europe.</string>
    <string name="Yalta_Conference_question">Yalta question</string>
    <string name="Yalta_Conference_answer_one">Yalta a1</string>
    <string name="Yalta_Conference_answer_two">Yalta a2</string>
    <string name="Yalta_Conference_answer_three">Yalta a3</string>
    <string name="Yalta_Conference_answer_four">Yalta a4</string>
    <string name="quiz_next_button_text">Volgende</string>
    <string name="youtube_api_demo">YouTube API Demos</string>
    <string name="videowall_demo_name">Video Wall</string>
    <string name="videolist_demo_name">Video List</string>
    <string name="standalone_player_demo_name">Standalone Player</string>
    <string name="playerview_demo_name">Simple PlayerView</string>
    <string name="fragment_demo_name">Simple PlayerFragment</string>
    <string name="player_controls_demo_name">Custom Player Controls</string>
    <string name="action_bar_demo_name">Overlay ActionBar Demo</string>
    <string name="fullscreen_demo_name">Custom Fullscreen Handling</string>
    <string name="intents_demo_name">YouTube App Launcher Intents</string>
    <string name="playerview_text">This is a YouTubePlayerView!</string>
    <string name="playerfragment_text">This is a YouTubePlayerFragment!</string>
    <string name="demo_select">Please select a demo:</string>
    <string name="some_demos_disabled">* Your device is currently running Android API version</string>
    <string name="list_item_disabled">Requires Android API version </string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip_to">Skip To</string>
    <string name="seconds">secs</string>
    <string name="player_style">Player Style</string>
    <string name="def">Default</string>
    <string name="minimal">Minimal</string>
    <string name="title_about">Handleiding</string>
    <string name="what_it_does_about">Wat doet het?</string>
    <string name="what_it_does_text">Quizzar maakt gebruik van de camera van je telefoon om afbeeldingen te scannen.
                                     Bij elke afbeelding die gescanned wordt hoort een video of een uitleg in de vorm van tekst.</string>
    <string name="how_it_works_title">Hoe werkt het?</string>
    <string name="how_it_works_text">Houdt je camera op een afbeelding om de bijbehoorende video of uitleg te tonen.
                                     Het duurt ongeveer een seconde voordat er iets wordt getoond.</string>
    <string name="quiz_title_about">De quiz</string>
    <string name="quiz_text_about">Nadat je alle afbeelding hebt gescanned en de theorie begrijpt kan je de quiz starten
                                    om je kennis te testen. Dit doe je doormiddel van het scannen van het quiz symbool op de poster.</string>
</resources>