<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/menu_background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/about_text_title"
        fontPath="fonts/VAG_Rounded_Bold.ttf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/title_bar_blue"
        android:gravity="center"
        android:padding="@dimen/menu_title_padding"
        android:text="@string/title_about"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_title"
        android:layout_marginStart="8dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/what_it_does_about"
        fontPath="fonts/VAG_Rounded_Bold.ttf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/about_text_title"
        android:layout_alignBottom="@+id/about_text_title"
        android:gravity="top"
        android:text="@string/what_it_does_about"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_title"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="123dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="123dp"
        android:layout_marginRight="123dp" />

    <Button
        android:id="@+id/button_start"
        fontPath="fonts/VAG_Rounded_Bold.ttf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/title_bar_blue"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/button_start"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_title"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/textView"
        frontPath="fonts/VAG_Rounded_Light.ttf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/what_it_does_text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/about_screen_text_size"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="115dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="121dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/how_it_works_title"
        fontPath="fonts/VAG_Rounded_Bold.ttf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/how_it_works_title"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_title"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="117dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="117dp"
        android:layout_marginRight="117dp" />

    <TextView
        android:id="@+id/textView2"
        frontPath="fonts/VAG_Rounded_Light.ttf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/how_it_works_text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/about_screen_text_size"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/quiz_title_about"
        fontPath="fonts/VAG_Rounded_Bold.ttf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/quiz_title_about"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_title"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="155dp"
        android:layout_marginRight="155dp" />

    <TextView
        android:id="@+id/textView3"
        frontPath="fonts/VAG_Rounded_Light.ttf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/quiz_text_about"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/about_screen_text_size"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="135dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>